fix: footer z-index

--- a/house_of_gambling/src/app/components/footer/footer.component.scss
+++ b/house_of_gambling/src/app/components/footer/footer.component.scss
@@ -1,6 +1,5 @@
 .container {
   position: relative;
-  z-index: -2;
   display: flex;
   justify-content: center;
   align-items: center;
